# plottrbot-python

./: .gitignore  README.md  pyproject.toml
docs/: testing-suite-procedure.md
scripts/: run_deep_hardware_validation.py  run_hardware_validation.py
src/plottrbot/: __main__.py  app.py
src/plottrbot/config/: __init__.py  settings.py
src/plottrbot/core/: __init__.py  bmp_converter.py  draw_session_logger.py  image_prep.py  models.py  state_machine.py
src/plottrbot/serial/: __init__.py  dummy_transport.py  nano_transport.py  program_streamer.py
src/plottrbot/system/: __init__.py  sleep_inhibitor.py
src/plottrbot/ui/: __init__.py  main_window.py  prep_preview_widget.py  preview_canvas.py
tests/: conftest.py  test_app.py  test_bmp_converter.py  test_draw_session_logger.py  test_dummy_transport.py  test_image_prep.py  test_main_window.py  test_nano_transport.py  test_parity_fixture.py  test_prep_preview_widget.py  test_program_streamer.py  test_resume_mapping.py  test_sleep_inhibitor.py  test_state_machine.py  test_ui_clickthrough.py
tests/fixtures/: csharp_parity_sample_raw.gcode
